--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,9 @@ jobs:
             k8s/mongodb/deployment.yaml
             k8s/mongodb/service.yaml
           
-      - name: Deploy mongoDB to Kubernetes cluster
+      - name: Deploy api-produto to Kubernetes cluster
         uses: Azure/k8s-deploy@v1.3
         with:
+          image: asergio68/api-produto:v${{github.run_number}}
           manifests: |
             k8s/api/deployment.yaml
