--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,6 @@ jobs:
       - name: Deploy api-produto to Kubernetes cluster
         uses: Azure/k8s-deploy@v1.3
         with:
-          image: asergio68/api-produto:v${{github.run_number}}
+          images: asergio68/api-produto:v${{github.run_number}}
           manifests: |
             k8s/api/deployment.yaml
