--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -65,3 +65,17 @@ spec:
     nodePort: 30000
   type: LoadBalancer
 
+---
+
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: api-hpa
+spec:
+  maxReplicas: 12 # define max replica count
+  minReplicas: 6  # define min replica count
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: api
+  targetCPUUtilizationPercentage: 50 # target CPU utilization
